# robotframework-talosforge

./: .gitignore  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  MIGRATION.md  README.md  pyproject.toml  requirements.txt  test_ui.json
.claude/: settings.local.json
.github/workflows/: ci.yml
TalosForge/: MANIFEST.in  __init__.py  config.example.yml  test_array.json  test_enum.json  test_faker.json  test_required.json
TalosForge/TalosForge/: __init__.py
TalosForge/core/: ai_generator.py  config.py  exceptions.py  generator.py
TalosForge/db/: __init__.py  base_schema_reader.py  postgres_schema_reader.py
TalosForge/docs/: Makefile  build.bat  conf.py  configuration.rst  index.rst  installation.rst  keywords.rst  migracni_pirucka.rst  requirements.txt  zmeny_chovani.rst
TalosForge/examples/: README.rst  api_testing.robot  ui_testing.robot
TalosForge/schema/: loader.py
TalosForge/utils/: cache.py  logger.py
TalosForge/validation/: __init__.py  error_formatter.py  exceptions.py  validator.py
docs/: ai_integration.rst  api.rst  build_docs.py  configuration.rst  faq.rst  index.rst  installation.rst  keywords.rst  zmeny_chovani.rst
examples/: ai_generation.robot
examples/schemas/: article.json  czech_specific.json  post.json
tests/: conftest.py
tests/fixtures/: array_of_objects.json  complex_test_schema.json  external_refs_main.yaml  invalid_yaml.yaml  nested_object.json  oas30_features.yaml  ref_chain_response.yaml  ref_test.yaml  regex_patterns.json  response_code_fallback.yaml  test_api_responses.yaml  test_config_en_US.yml  user.json
(+46 files in other folders)
