[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TalosForge"
version = "0.4.0"
description = "Schema-driven test data generator for Robot Framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "TalosForge Contributors"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Robot Framework",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "robotframework>=7.0",
    "faker",
    "PyYAML",
    "requests",
    "openai>=1.0",
    "rapidfuzz>=3.0.0",
    "openapi-schema-validator>=0.7.0",
]

[project.optional-dependencies]
ai = ["openai>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "flake8",
    "black",
]

[project.urls]
Homepage = "https://github.com/yourusername/TalosForge"
Repository = "https://github.com/yourusername/TalosForge"
Issues = "https://github.com/yourusername/TalosForge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["TalosForge*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
